latex2mmlc/src/snapshots/latex2mmlc__parse__tests__mathit_greek.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\mathit{\\Alpha\\Beta}"
---
[
  TextTransform(
    tf: Some(Italic),
    content: CollectedLetters("ΑΒ"),
  ),
]
