latex2mmlc/src/snapshots/latex2mmlc__parse__tests__mathit_mathrm_nested.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\mathit{\\mathrm{a}b}"
---
[
  TextTransform(
    tf: Some(Italic),
    content: Row(
      nodes: [
        TextTransform(
          tf: None,
          content: SingleLetterIdent('a', None),
        ),
        SingleLetterIdent('b', None),
      ],
      style: None,
    ),
  ),
]
