latex2mmlc/src/snapshots/latex2mmlc__parse__tests__mathit_of_max.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\mathit{ab \\max \\alpha\\beta}"
---
[
  TextTransform(
    tf: Transform(Italic),
    content: Row(
      nodes: [
        CollectedLetters("ab"),
        MultiLetterIdent("max"),
        CollectedLetters("αβ"),
      ],
      attr: None,
    ),
  ),
]
