latex2mmlc/src/snapshots/latex2mmlc__parse__tests__mathrm_mathit_nested.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\mathrm{\\mathit{a}b}"
---
[
  TextTransform(
    tf: Normal,
    content: Row(
      nodes: [
        TextTransform(
          tf: Transform(Italic),
          content: SingleLetterIdent('a', false),
        ),
        SingleLetterIdent('b', false),
      ],
      attr: None,
    ),
  ),
]
