latex2mmlc/src/snapshots/latex2mmlc__parse__tests__mathrm_mathit_nested_multi.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\mathrm{ab\\mathit{cd}ef}"
---
[
  TextTransform(Row(
    nodes: [
      CollectedLetters("ab"),
      TextTransform(CollectedLetters("cd"), Some(Italic)),
      CollectedLetters("ef"),
    ],
    style: None,
  ), None),
]
