latex2mmlc/src/snapshots/latex2mmlc__parse__tests__matrix.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\begin{pmatrix} x \\\\ y \\end{pmatrix}"
---
[
  Fenced(
    style: None,
    open: ('(', false, Always),
    close: (')', false, Always),
    content: Table(
      content: [
        SingleLetterIdent('x', false),
        RowSeparator,
        SingleLetterIdent('y', false),
      ],
      align: Center,
      attr: None,
    ),
  ),
]
