latex2mmlc/src/snapshots/latex2mmlc__parse__tests__number_after_circumflex.snap
---
source: latex2mmlc/src/parse.rs
expression: x^12
---
[
  Superscript(
    target: SingleLetterIdent('x', false),
    symbol: Number("1"),
  ),
  Number("2"),
]
