latex2mmlc/src/snapshots/latex2mmlc__parse__tests__number_after_lim.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\sum\\limits_12"
---
[
  Underset(
    symbol: Number("1"),
    target: Operator(Op('∑'), Some(NoMovableLimits)),
  ),
  Number("2"),
]
