latex2mmlc/src/snapshots/latex2mmlc__parse__tests__number_after_overbrace.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\overbrace12"
---
[
  Overset(
    symbol: Operator(Op('⏞'), None),
    target: Number("1"),
  ),
  Number("2"),
]
