latex2mmlc/src/snapshots/latex2mmlc__parse__tests__number_after_underscore.snap
---
source: latex2mmlc/src/parse.rs
expression: x_12
---
[
  Subscript(
    target: SingleLetterIdent('x', false),
    symbol: Number("1"),
  ),
  Number("2"),
]
