latex2mmlc/src/snapshots/latex2mmlc__parse__tests__number_with_dot.snap
---
source: latex2mmlc/src/parse.rs
expression: 4.x
---
[
  PseudoRow([
    Number("4"),
    SingleLetterIdent('.', false),
  ]),
  SingleLetterIdent('x', false),
]
