latex2mmlc/src/snapshots/latex2mmlc__parse__tests__number_with_dot_and_letter.snap
---
source: latex2mmlc/src/parse.rs
expression: 4.x
---
[
  Number("4"),
  SingleLetterIdent('.', false),
  SingleLetterIdent('x', false),
]
